--- a/test/money/Todo
+++ b/test/money/Todo
@@ -1,5 +1,13 @@
 $5 + 10 CHF = $10 (レートが２：１の場合）
 ✅$5 * 2 = $10
-amount をprivate にする
+✅amount をprivate にする
 ✅Dollarの副作用
 Moneyの丸め処理
+✅equals()
+hashCode()
+nullとの等価性比較
+他のオブジェクトとの等価性比較
+✅5 CHF * 2 = 10 CHF
+Dollar とFrancの重複
+equalsの一般化
+timesの一般化
