--- a/test/money/Todo
+++ b/test/money/Todo
@@ -1,4 +1,4 @@
-$5 + 10 CHF = $10 (レートが２：１の場合）
+
 ✅$5 * 2 = $10
 ✅amount をprivate にする
 ✅Dollarの副作用
@@ -8,9 +8,9 @@ hashCode()
 nullとの等価性比較
 他のオブジェクトとの等価性比較
 ✅5 CHF * 2 = 10 CHF
-Dollar とFrancの重複
+✅Dollar とFrancの重複
 ✅equalsの一般化
-timesの一般化
+✅timesの一般化
 ✅FrancとDollarを比較する
-通貨の概念
-testFrancMultiplicatoinを削除する
+✅通貨の概念
+✅testFrancMultiplicationを削除する
